--- a/sass/site/map.scss
+++ b/sass/site/map.scss
@@ -9,6 +9,7 @@
       background-color: white;
       left: 110px;
       top: 100px;
+      width: 570px;
     }
     &--indent {
       padding: 20px;
@@ -27,12 +28,18 @@
     @media (min-width: $tablet) {
       @include font(normal, 20px, 25px);
     }
+    @media (min-width: $desktop) {
+      width: 70%;
+    }
   }
   &__address {
     width: 50%;
     @media (min-width: $tablet) {
       text-align: end;
       font: 16px/20px Aria, sans-serif;
+    }
+    @media (min-width: $desktop) {
+      text-align: start;
     }
 
   }
