--- a/sass/site/how.scss
+++ b/sass/site/how.scss
@@ -1,5 +1,5 @@
 .how {
-
+  counter-reset: how-counter; /* Инициируем счетчик для how */
   &__block {
     &--indent {
       padding-bottom: 20px;
@@ -27,7 +27,7 @@
     align-items: center;
     position: relative;
     @media(min-width: $tablet) {
-      border: 1px solid #000;
+      //border: 1px solid #000;
       display: block;
       width: 50%;
       height: 300px;
@@ -42,8 +42,8 @@
         content: counter(how-counter);   /* Отображает текущее
                                                  значение счетчика */
         position: absolute;
-        top: 0;
-        right: 0;
+        top: -40px;
+        right: 40px;
         bottom: 0;
         left: 0;
         color: $secondary;
@@ -106,25 +106,5 @@
         padding-bottom: 45px;
       }
     }
-  }
-  &__count {
-    display: none;
-    @media(min-width: $tablet) {
-      //display: block;
-/*      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      pointer-events: none;
-      color: $secondary;
-      @include font(normal, 180px, 1);
-      text-align: center;
-      z-index: 0 ;*/
-      //margin-right: 90px;
-    }
-    /*@media(min-width: $desktop) {
-      margin-right: 15px;
-    }*/
   }
 }
