--- a/sass/site/map.scss
+++ b/sass/site/map.scss
@@ -29,7 +29,7 @@
       @include font(normal, 20px, 25px);
     }
     @media (min-width: $desktop) {
-      width: 70%;
+      width: 70;
     }
   }
   &__address {
