--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,12 @@
 @import "site/btn";
 @import "site/social";
 @import "site/switcher";
+@import "site/element";
+
+@import "site/zel";
+
+@import "site/catalog";
+@import "site/additional";
 
 
 
