--- a/sass/site/header.scss
+++ b/sass/site/header.scss
@@ -6,11 +6,13 @@
     @media (min-width: $tablet) {
       flex-direction: row;
       justify-content: space-between;
-      position: absolute;
-      top: 0;
-      right: 0;
-      left: 0;
-      z-index: 2 ;
+      &--for-cat {
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 2;
+      }
     }
     &--indent {
       @media (min-width: $tablet) {
@@ -35,18 +37,27 @@
         margin-bottom: 80px;
       }
     }
-  }
-  @media (min-width: $desktop) {
-    &:after {
-      content: ' ';
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 50%;
-      z-index: 0;
-      height: 695px;
-      background: #63a73a url('/img/index-background-desktop.png') no-repeat;
+    &--catalog-indent {
+      padding-bottom: 20px;
     }
+  }
+  &__bg-cat {
+    @media (min-width: $desktop) {
+      &:after {
+        content: ' ';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 50%;
+        z-index: 0;
+        height: 695px;
+        background: #63a73a url('/img/index-background-desktop.png') no-repeat;
+      }
+    }
+  }
+
+  &__warp-catalog {
+
   }
 }
